# ytq

./: .gitignore  README.md  pyproject.toml  spec.md
docs/: prompt_plan.md  spec.md  todo.md
tests/: test_chunking.py  test_cli.py  test_core.py  test_db.py  test_embeddings.py  test_llm_summarizer.py  test_transcript.py  test_yt_scribe.py
yt_scribe/: __init__.py  cli.py  core.py  db.py  embeddings.py
ytq/: cli.py  db.py
